[package]
name = "amethyst-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risc0-zkvm = "0.11"
risc0-zkvm-guest = "0.11"
primitive-types = { version = "0.11", default-features = false, features = ["serde_no_std"]}
serde = "1"
revm = { path = "../../revm/crates/revm", features = ["with-serde"]}
bytes = { version = "1", features = ["serde"] }
sha3 = "0.10.5"
