[package]
name = "amethyst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst-methods = { path = "../amethyst-methods" }
risc0-zkvm = "0.11"
serde = "1.0"

[features]
default = ["receipt"]
receipt = []
